--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# But keep .env.example in Git
+!.env.example
+
 # vercel
 .vercel
 
