--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@headlessui/react": "^2.2.0",
     "@prisma/client": "^6.5.0",
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
